--- a/cfg/david_monthly.yaml
+++ b/cfg/david_monthly.yaml
@@ -66,11 +66,11 @@ pages:
       - funcname: weekly
         tpls:
           - breadcrumb_04_weekly.tpl
-  # - name: daily_reflect
-  #   renderblocks:
-  #     - funcname: daily_reflect
-  #       tpls:
-  #         - breadcrumb_06_daily_reflect.tpl
+  - name: daily_reflect
+    renderblocks:
+      - funcname: daily_reflect
+        tpls:
+          - breadcrumb_06_daily_reflect.tpl
   # - name: daily_plan
   #   renderblocks:
   #     - funcname: daily_plan
