--- a/cfg/david_monthly.yaml
+++ b/cfg/david_monthly.yaml
@@ -60,17 +60,15 @@ layout:
     gray: gray
     lightgray: gray!50
 
+defaultheader: breadcrumb_00_header.tpl
+
 pages:
   - name: weekly
-    renderblocks:
-      - funcname: weekly
-        tpls:
-          - breadcrumb_04_weekly.tpl
+    funcname: weekly
+    template: weekly.tpl
   - name: daily_reflect
-    renderblocks:
-      - funcname: daily_reflect
-        tpls:
-          - breadcrumb_06_daily_reflect.tpl
+    funcname: daily
+    template: daily_reflect.tpl
   # - name: daily_plan
   #   renderblocks:
   #     - funcname: daily_plan
