--- a/cfg/template_breadcrumb.yaml
+++ b/cfg/template_breadcrumb.yaml
@@ -3,53 +3,53 @@ pages:
     renderblocks:
       - funcname: title
         tpls:
-          - title.tpl
+          - title.gtpl
 
   - name: annual
     renderblocks:
       - funcname: annual
         tpls:
-          - breadcrumb_01_annual.tpl
+          - breadcrumb_01_annual.gtpl
 
   - name: quarterly
     renderblocks:
       - funcname: quarterly
         tpls:
-          - breadcrumb_02_quarterly.tpl
+          - breadcrumb_02_quarterly.gtpl
 
   - name: monthly
     renderblocks:
       - funcname: monthly
         tpls:
-          - breadcrumb_03_monthly.tpl
+          - breadcrumb_03_monthly.gtpl
 
   - name: weekly
     renderblocks:
       - funcname: weekly
         tpls:
-          - breadcrumb_04_weekly.tpl
+          - breadcrumb_04_weekly.gtpl
 
   - name: `ily
     renderblocks:
       - funcname: daily
         tpls:
-          - breadcrumb_05_daily.tpl
+          - breadcrumb_05_daily.gtpl
 
   - name: daily_reflect
     renderblocks:
       - funcname: daily_reflect
         tpls:
-          - breadcrumb_06_daily_reflect.tpl
+          - breadcrumb_06_daily_reflect.gtpl
 
   - name: daily_notes
     renderblocks:
       - funcname: daily_notes
         tpls:
-          - breadcrumb_07_daily_notes.tpl
+          - breadcrumb_07_daily_notes.gtpl
 
   - name: notes_indexed
     renderblocks:
       - funcname: notes_indexed
         tpls:
-          - breadcrumb_08_notes_index.tpl
-          - breadcrumb_09_notes.tpl
+          - breadcrumb_08_notes_index.gtpl
+          - breadcrumb_09_notes.gtpl
