--- a/cfg/template_months_on_side.yaml
+++ b/cfg/template_months_on_side.yaml
@@ -3,53 +3,53 @@ pages:
     renderblocks:
       - funcname: title
         tpls:
-          - title.tpl
+          - title.gtpl
 
   - name: annual
     renderblocks:
       - funcname: annual
         tpls:
-          - mos_01_annual.tpl
+          - mos_01_annual.gtpl
 
   - name: quarterly
     renderblocks:
       - funcname: quarterly
         tpls:
-          - mos_02_quarterly.tpl
+          - mos_02_quarterly.gtpl
 
   - name: monthly
     renderblocks:
       - funcname: monthly
         tpls:
-          - mos_03_monthly.tpl
+          - mos_03_monthly.gtpl
 
   - name: weekly
     renderblocks:
       - funcname: weekly
         tpls:
-          - mos_04_weekly.tpl
+          - mos_04_weekly.gtpl
 
   - name: daily
     renderblocks:
       - funcname: daily
         tpls:
-          - mos_05_daily.tpl
+          - mos_05_daily.gtpl
 
   - name: daily_reflect
     renderblocks:
       - funcname: daily_reflect
         tpls:
-          - mos_06_daily_reflect.tpl
+          - mos_06_daily_reflect.gtpl
 
   - name: daily_notes
     renderblocks:
       - funcname: daily_notes
         tpls:
-          - mos_07_daily_notes.tpl
+          - mos_07_daily_notes.gtpl
 
   - name: notes_indexed
     renderblocks:
       - funcname: notes_indexed
         tpls:
-          - mos_08_notes_index.tpl
-          - mos_09_notes.tpl
+          - mos_08_notes_index.gtpl
+          - mos_09_notes.gtpl
